--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
 	<section>
 		<h1>Git, GitHub & the Command Line</h1>
-		<p>Gotta love becoming a collaborative coder <3</p>
-		<img src="img/happy-blue-robot.png">
+		<p>Gotta love becoming a collaborative coder <3 <br>
+		  GitHub is an awesome community!
+		</p>
+		<img src="img/happy-blue-robot.png" alt="happy blue robot"/>
 	</section>
 </body>
 </html>
